; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/security/selinux/ss/extr_policydb.c_mls_write_level.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/security/selinux/ss/extr_policydb.c_mls_write_level.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.mls_level = type { i32, i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.mls_level*, i8*)* @mls_write_level to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @mls_write_level(%struct.mls_level* %0, i8* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca %struct.mls_level*, align 8
  %5 = alloca i8*, align 8
  %6 = alloca [1 x i32], align 4
  %7 = alloca i32, align 4
  store %struct.mls_level* %0, %struct.mls_level** %4, align 8
  store i8* %1, i8** %5, align 8
  %8 = load %struct.mls_level*, %struct.mls_level** %4, align 8
  %9 = getelementptr inbounds %struct.mls_level, %struct.mls_level* %8, i32 0, i32 1
  %10 = load i32, i32* %9, align 4
  %11 = call i32 @cpu_to_le32(i32 %10)
  %12 = getelementptr inbounds [1 x i32], [1 x i32]* %6, i64 0, i64 0
  store i32 %11, i32* %12, align 4
  %13 = getelementptr inbounds [1 x i32], [1 x i32]* %6, i64 0, i64 0
  %14 = load i8*, i8** %5, align 8
  %15 = call i32 @put_entry(i32* %13, i32 4, i32 1, i8* %14)
  store i32 %15, i32* %7, align 4
  %16 = load i32, i32* %7, align 4
  %17 = icmp ne i32 %16, 0
  br i1 %17, label %18, label %20

18:                                               ; preds = %2
  %19 = load i32, i32* %7, align 4
  store i32 %19, i32* %3, align 4
  br label %30

20:                                               ; preds = %2
  %21 = load %struct.mls_level*, %struct.mls_level** %4, align 8
  %22 = getelementptr inbounds %struct.mls_level, %struct.mls_level* %21, i32 0, i32 0
  %23 = load i8*, i8** %5, align 8
  %24 = call i32 @ebitmap_write(i32* %22, i8* %23)
  store i32 %24, i32* %7, align 4
  %25 = load i32, i32* %7, align 4
  %26 = icmp ne i32 %25, 0
  br i1 %26, label %27, label %29

27:                                               ; preds = %20
  %28 = load i32, i32* %7, align 4
  store i32 %28, i32* %3, align 4
  br label %30

29:                                               ; preds = %20
  store i32 0, i32* %3, align 4
  br label %30

30:                                               ; preds = %29, %27, %18
  %31 = load i32, i32* %3, align 4
  ret i32 %31
}

declare dso_local i32 @cpu_to_le32(i32) #1

declare dso_local i32 @put_entry(i32*, i32, i32, i8*) #1

declare dso_local i32 @ebitmap_write(i32*, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
